Added personalkollen logo

--- a/frontend-friends/src/components/pagewrapper/pagewrapper.scss
+++ b/frontend-friends/src/components/pagewrapper/pagewrapper.scss
@@ -1,3 +1,9 @@
 .page-container{
     display: flex;
 }
+
+.content-container{
+    margin-left: 282px;
+    flex-grow: 1;
+    overflow: hidden;
+}
