Created text field component

--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -2,3 +2,6 @@ $primary-color: #579CFB;
 $light-grey: #F0F1F2;
 $grey-text: #A6A6A6;
 $dark-blue: #283055;
+$text-field-background: #F7F9FB;
+$text-field-stroke: #B8C4CF;
+$placeholder-text: #B7BECC;
