--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -1,4 +1,6 @@
 $primary-color: #579CFB;
 $light-grey: #F0F1F2;
+$darkerlight-grey: #e9ecf1;
 $grey-text: #A6A6A6;
 $dark-blue: #283055;
+$primary-red: #f03f3e;
