--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -4,6 +4,13 @@ $darkerlight-grey: #e9ecf1;
 $grey-text: #A6A6A6;
 $dark-blue: #283055;
 $primary-red: #f03f3e;
+$green: #18B785;
+$lime-green: #95D82C;
+$grape: #9c36b5;
+$violet: #b197fb;
+$pink: #f883ac;
+$orange: #ff922a;
+$yellow: #ffd43b;
 $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
 $placeholder-text: #B7BECC;
