--- a/frontend-friends/src/components/categoryButton/button.scss
+++ b/frontend-friends/src/components/categoryButton/button.scss
@@ -1,50 +1,109 @@
 @use '../../style/colors';
-label {
-    all: unset;
-    padding: 20px 30px;
-    border-radius: 6px;
-    text-transform: uppercase;
-    font-weight: 600;
-    user-select: none;
-    cursor: pointer;
+.category-button-wrapper{
+    label {
+        all: unset;
+        box-sizing: border-box;
+        height: 80px;
+        padding: 20px 30px;
+        text-transform: uppercase;
+        font-weight: 600;
+        user-select: none;
+        text-align: center;
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+    input[type="radio"]{
+        position: fixed;
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    input[type="radio"]:checked+label{
+        color: white;
+    }
+
+    input[type="radio"]+label:hover{
+        background-color: colors.$darkerlight-grey;
+    }
+
+    input[type="radio"]+label{
+        background-color: white;
+    }
+
+    // RED
+    input[type="radio"]:checked+label.red{
+        background-color: colors.$primary-red;
+        color: white;
+    }
+
+    .red{
+        color: colors.$primary-red;
+        box-shadow: inset 0 0 0 4px colors.$primary-red;
+    }
+
+
+    // Dark Blue
+    input[type="radio"]:checked+label.darkblue{
+        background-color: colors.$dark-blue;
+        color: white;
+    }
+
+    .darkblue{
+        color: colors.$dark-blue;
+        box-shadow: inset 0 0 0 4px colors.$dark-blue;
+    }
+
+    // Grape
+
+    input[type="radio"]:checked+label.grape{
+        background-color: colors.$grape;
+        color: white;
+    }
+
+    .grape{
+        color: colors.$grape;
+        box-shadow: inset 0 0 0 4px colors.$grape;
+    }
+
+    //Yellow
+    input[type="radio"]:checked+label.yellow{
+        background-color: colors.$yellow;
+        color: white;
+    }
+
+    .yellow{
+        color: colors.$yellow;
+        box-shadow: inset 0 0 0 4px colors.$yellow;
+    }
+
+
+    //Green
+    input[type="radio"]:checked+label.green{
+        background-color: colors.$green;
+        color: white;
+    }
+
+    .green{
+        color: colors.$green;
+        box-shadow: inset 0 0 0 4px colors.$green;
+    }
+
+
+    //Orange
+    input[type="radio"]:checked+label.orange{
+        background-color: colors.$orange;
+        color: white;
+    }
+
+    .orange{
+        color: colors.$orange;
+        box-shadow: inset 0 0 0 4px colors.$orange;
+    }
+
+
 }
-
-input[type="radio"]{
-    position: fixed;
-    opacity: 0;
-    pointer-events: none;
-}
-
-input[type="radio"]:checked+label{
-    color: white;
-}
-
-input[type="radio"]+label:hover{
-    background-color: colors.$darkerlight-grey;
-}
-
-input[type="radio"]+label{
-    background-color: white;
-}
-
-input[type="radio"]:checked+label.red{
-    background-color: colors.$primary-red;
-    color: white;
-}
-
-.red{
-    color: colors.$primary-red;
-    box-shadow: inset 0 0 0 4px colors.$primary-red;
-}
-
-
-input[type="radio"]:checked+label.darkblue{
-    background-color: colors.$dark-blue;
-    color: white;
-}
-
-.darkblue{
-    color: colors.$dark-blue;
-    box-shadow: inset 0 0 0 4px colors.$dark-blue;
-}
-
