--- a/frontend-friends/src/components/categoryButtonGroup/categoryButtonGroup.scss
+++ b/frontend-friends/src/components/categoryButtonGroup/categoryButtonGroup.scss
@@ -16,11 +16,16 @@
     height: 100px;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+  }
+
 .subcategory-popup-1{
     background-color: colors.$light-grey;
     max-width: 100%;
     max-height: 100%;
-    display: grid;
+    display: inline-grid;
     grid-template-columns: repeat(4, 200px);
     flex-wrap: wrap;
     gap: 10px;
