--- a/frontend-friends/src/components/categoryButtonGroup/categoryButtonGroup.scss
+++ b/frontend-friends/src/components/categoryButtonGroup/categoryButtonGroup.scss
@@ -23,10 +23,10 @@
 
 .subcategory-popup-1{
     background-color: colors.$light-grey;
-    max-width: 100%;
-    max-height: 100%;
-    display: inline-grid;
-    grid-template-columns: repeat(4, 200px);
-    flex-wrap: wrap;
+    display:flex;
+    justify-content: center;
+    flex-grow: 4;
+    flex-shrink: 0;
     gap: 10px;
+    grid-column: span 4;
 }
