--- a/frontend-friends/src/components/textfield/textfield.scss
+++ b/frontend-friends/src/components/textfield/textfield.scss
@@ -1,15 +1,16 @@
 @use "../../style/colors.scss";
 
 .mandatory-text-field {
-    all: unset;
-    position: relative;
+
+    /*all: unset;
+    // position: relative;
 
     input:valid + .placeholder {
         display: none;
     }
     .placeholder {
         position: absolute;
-        pointer-events: none;
+        // pointer-events: none;
         top: 0;
         bottom: 0;
         height: 25px;
@@ -21,7 +22,7 @@
         span {
             color:red;
         }
-    }
+    }*/
     input {
         all: unset;
         border-radius: 6px;
@@ -30,33 +31,60 @@
         border: 1px solid colors.$text-field-stroke;
         box-sizing: border-box;
         padding: 0 20px;
-        font-size: 25px;
+        font-size: 18px;
+        transition: border-color 0.3s;
+
+        &:focus {
+            border-color: colors.$primary-color;
+            border-width: 2px;
+        }
     }
   }
 
 
 .text-field {
+
+    position: relative;
+
     ::placeholder{
-        position: absolute;
-        pointer-events: none;
-        top: 0;
-        bottom: 0;
-        height: 25px;
-        font-size: 25px;
-        left: 10px;
-        margin: auto;
         color: colors.$placeholder-text;
     }
 
     input {
         all: unset;
         border-radius: 6px;
+        width: 100%;
         height: 50px;
         background-color: colors.$text-field-background;
         border: 1px solid colors.$text-field-stroke;
         box-sizing: border-box;
         padding: 0 20px;
-        font-size: 25px;
+        font-size: 18px;
+        transition: border-color 0.3s;
+
+        &:focus {
+            border-color: colors.$primary-color;
+            border-width: 2px;
+        }
+    }
+
+    label {
+        position: absolute;
+        left: 0;
+        color: colors.$placeholder-text;
+        font-size: 18px;
+        left: 22px;
+        line-height: 50px;
+        cursor:text;
+    }
+
+    input[required] + label:after {
+        content:'*';
+        color: red;
+    }
+
+    input:valid + label{
+        display: none;
     }
 }
 
