--- a/frontend-friends/src/components/sidebar/sidebar.scss
+++ b/frontend-friends/src/components/sidebar/sidebar.scss
@@ -1,12 +1,34 @@
 @use '../../style/colors';
 
+.collapsed-sidebar .sidebar-container{
+    width: 80px;
+    .nav-text{
+        width: 0;
+        overflow: hidden;
+        height: 0;
+    }
 
+    .navigation-link{
+        display: flex;
+        justify-content: center;
+        padding: 0.5em 0.5em;
+        gap: 0;
+        border-radius: 30px;
+    }
 
+    .default-logo{
+        display: none;
+    }
 
-.sidebar-container{
+    .small-logo{
+        display: block;
+    }
+}
+
+.sidebar-container, .sidebar-container:hover{
     overflow: hidden;
     background-color: #fff;
-    width: 80px;
+    width: 260px;
     height: 100vh;
     padding: 1em;
     position: fixed;
@@ -26,16 +48,8 @@
         width: auto;
         overflow: hidden;
         svg{
-            height: 24px;
+            height: 20px;
             flex-shrink: 0;
-            display: block;
-        }
-
-        .default-logo{
-            display: none;
-        }
-    
-        .small-logo{
             display: block;
         }
     }
@@ -60,18 +74,24 @@
         font-size: 20px;
     }
 
-    .navigation-link{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0.5em 0.5em;
-        border-radius: 1em;
-        margin: 0.2em auto;
-    }
+
 
     .navigation-link:hover{
         background-color: colors.$light-grey;
     }
+
+    .navigation-link{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        padding: 0.5em 1em;
+        border-radius: 1em;
+        font-size: 20px;
+        height: 28px;
+        margin: 0.2em auto;
+        gap: 0 1em;
+    }
+
 
     .navigation-link svg{
         flex-shrink: 0;
@@ -96,31 +116,11 @@
         color: colors.$primary-color;
     }
 
-    .nav-text{
-        width: 0;
-        overflow: hidden;
-        height: 0;
-    }
-
-
-
-    
-}
-
-.sidebar-container:hover{
-    width: 280px;
-    transition: width 0.1s ease-in-out;
-
     ul{
         align-items: stretch;
     }
 
-    .navigation-link{
-        justify-content: start;
-        padding: 0.5em 1em;
-        font-size: 20px;
-        gap: 1em;
-    }
+
     .nav-text{
         height: auto;
         width: fit-content;
@@ -136,3 +136,32 @@
     }
 }
 
+
+
+@media screen and (max-width: 992px){
+    .sidebar-container{
+        width: 80px;
+        .nav-text{
+            width: 0;
+            overflow: hidden;
+            height: 0;
+        }
+    
+        .navigation-link{
+            display: flex;
+            justify-content: center;
+            padding: 0.5em 0.5em;
+            gap: 0;
+        }
+
+        .default-logo{
+            display: none;
+        }
+    
+        .small-logo{
+            display: block;
+        }
+    }
+
+
+}
