--- a/frontend-friends/src/components/subcategoryButton/subcategoryButton.scss
+++ b/frontend-friends/src/components/subcategoryButton/subcategoryButton.scss
@@ -107,3 +107,12 @@
         box-shadow: inset 0 0 0 4px colors.$orange;
     }
 }
+
+
+.subcategory-popup{
+    grid-column-start: 1;
+    grid-column-end: span 4;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
