Finished case list

--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -28,3 +28,5 @@ $category-darker-green: #0EAD69;
 $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
 $placeholder-text: #B7BECC;
+
+$table-header-text: #879298;
