--- a/frontend-friends/src/components/pagewrapper/pagewrapper.scss
+++ b/frontend-friends/src/components/pagewrapper/pagewrapper.scss
@@ -1,3 +1,5 @@
+@use "../../style/colors.scss";
+
 .page-container{
     display: flex;
 }
@@ -6,4 +8,16 @@
     margin-left: 80px;
     flex-grow: 1;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    h1 {
+        all: unset;
+        font-size: 32px;
+        font-weight: 600;
+        color: colors.$dark-blue;
+        margin-top: 40px;
+        margin-left: 40px;
+        margin-bottom: 40px;
+    }
 }
