labels not selectable now

--- a/frontend-friends/src/components/textfield/textfield.scss
+++ b/frontend-friends/src/components/textfield/textfield.scss
@@ -38,6 +38,7 @@
         font-size: 18px;
         left: 22px;
         line-height: 50px;
+        pointer-events: none;
         cursor:text;
     }
 
