The popup looks good but is not very functional

--- a/frontend-friends/src/components/list/list.scss
+++ b/frontend-friends/src/components/list/list.scss
@@ -17,6 +17,10 @@ tr, th, td {
     color: colors.$dark-blue;
 }
 
+td {
+    cursor: pointer;
+}
+
 .list-header {
     background-color: colors.$light-grey;
 
