Fixed React errors

--- a/frontend-friends/src/components/sidebar/sidebar.scss
+++ b/frontend-friends/src/components/sidebar/sidebar.scss
@@ -83,7 +83,7 @@
     .navigation-link{
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: flex-start;
         padding: 0.5em 1em;
         border-radius: 1em;
         font-size: 20px;
