--- a/frontend-friends/src/components/textArea/text-area.scss
+++ b/frontend-friends/src/components/textArea/text-area.scss
@@ -6,7 +6,6 @@
 
     textarea {
 
-
         ::placeholder{
             color: colors.$placeholder-text;
         }
@@ -41,6 +40,10 @@
     textarea[required] + label:after {
         content:'*';
         color: colors.$danger-red;
+    }
+
+    textarea[valid] + label {
+        display: none;
     }
     
     textarea:focus + label{
