--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -23,6 +23,7 @@
     background: white;
     width: 500px;
     height: 85%;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     padding: 0 30px;
@@ -34,7 +35,7 @@
         font-weight: 600;
         font-size: 24px;
         margin: 0;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
         margin-top: 30px;
     }
 
@@ -59,6 +60,10 @@
     button {
         width: 50%;
     }
+
+    p {
+        color: colors.$dark-blue;
+    }
 }
 
 .text-fields-container {
@@ -67,10 +72,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
-
-    input {
-        margin-bottom: 30px;
-    }
 }
 
 .dual-textfield-container {
@@ -78,3 +79,11 @@
     gap: 10px;
 }
 
+.dual-textfield-labels {
+    display: flex;
+    gap: 10px;
+
+    p {
+        flex-grow: 1;
+    }
+}
