--- a/frontend-friends/src/routes/input/input.scss
+++ b/frontend-friends/src/routes/input/input.scss
@@ -13,13 +13,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 45px;
+    gap: 30px;
 
     form {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 45px;
+        gap: 30px;
+
+        textarea {
+            height: 100px;
+        }
+
+        .text-area {
+            width: 55%;
+        }
     }
 
     .text-field {
@@ -32,6 +40,7 @@
         margin: 0;
         font-size: 24px;
     }
+    margin-bottom: 5px;
 }
 
 .text-field-container {
