--- a/frontend-friends/src/components/categoryButton/button.scss
+++ b/frontend-friends/src/components/categoryButton/button.scss
@@ -1,12 +1,14 @@
 @use '../../style/colors';
+
 .category-button-wrapper{
+
+    position: relative;
+
     label {
         all: unset;
         box-sizing: border-box;
         height: 80px;
         padding: 20px 30px;
-        text-transform: uppercase;
-        font-weight: 600;
         user-select: none;
         text-align: center;
         border-radius: 6px;
@@ -23,29 +25,43 @@
         pointer-events: none;
     }
 
-    input[type="radio"]:checked+label{
+    input[type="radio"]+label{
         color: white;
     }
 
-    input[type="radio"]+label:hover{
-        background-color: colors.$darkerlight-grey;
+    svg{
+        position: absolute;
+        left: 75.5px;
+        top: 21px;
+        transform: scale(1.5);
+        z-index: 1;
     }
 
-    input[type="radio"]+label{
-        background-color: white;
+    span{
+        position: absolute;
+        top: 0;
+        line-height: 80px;
+        width: 100%;
+        text-align: center;
+        z-index: 2;
+        text-transform: uppercase;
+        color: white;
+        font-weight: 600;
     }
 
     // RED
+    .red {
+        background-color: colors.$primary-color;
+    }
+
     input[type="radio"]:checked+label.red{
-        background-color: colors.$primary-red;
-        color: white;
+        background: linear-gradient(
+            to right,
+            colors.$primary-color 0% 15%,
+            #8DBCFC 15% 85%,
+            colors.$primary-color 85% 100%
+        );
     }
-
-    .red{
-        color: colors.$primary-red;
-        box-shadow: inset 0 0 0 4px colors.$primary-red;
-    }
-
 
     // Dark Blue
     input[type="radio"]:checked+label.darkblue{
