Changed the button designs for demo

--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -14,16 +14,27 @@ $orange: #ff922a;
 $yellow: #ffd43b;
 /* Category colors from Figma */
 $category-blue: $primary-color;
-$category-red: $primary-red;
+$category-blue-dark: #3B6AAB;
 $category-cyan: #20E2BA;
+$category-cyan-dark: #169A7E;
+$category-red: $primary-red;
+$category-red-dark: #AC4057;
 $category-yellow: #F8D347;
+$category-yellow-dark: #A98F30;
 $category-brown: #BC6C25;
+$category-brown-dark: #804919;
 $category-dark-blue: #073B4C;
+$category-dark-blue-dark: #052834;
 $category-purple: #A259FF;
+$category-purple-dark: #6E3DAD;
 $category-violet: #9694FF;
+$category-violet-dark: #6665AD;
 $category-gray: #B0C4B1;
+$category-gray-dark: #788578;
 $category-orange: #F68C37;
+$category-orange-dark: #A75F25;
 $category-darker-green: #0EAD69;
+$category-darker-green-dark: #0A7647;
 
 $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
