--- a/frontend-friends/src/components/categoryButton/button.scss
+++ b/frontend-friends/src/components/categoryButton/button.scss
@@ -17,6 +17,7 @@
         justify-content: center;
         overflow: hidden;
         cursor: pointer;
+        position: relative;
     }
 
     input[type="radio"]{
@@ -35,90 +36,201 @@
         top: 21px;
         transform: scale(1.5);
         z-index: 1;
+        display:none;
     }
 
     span{
         position: absolute;
         top: 0;
-        line-height: 80px;
         width: 100%;
+        height: 100%;
         text-align: center;
-        z-index: 2;
         text-transform: uppercase;
         color: white;
         font-weight: 600;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 2;
     }
 
-    // RED
-    .red {
+    // Category blue
+    .category-blue {
         background-color: colors.$primary-color;
     }
 
-    input[type="radio"]:checked+label.red{
+    input[type="radio"]:checked+label.category-blue{
         background: linear-gradient(
             to right,
-            colors.$primary-color 0% 15%,
-            #8DBCFC 15% 85%,
-            colors.$primary-color 85% 100%
+            colors.$category-blue 0% 15%,
+            colors.$category-blue-dark 15% 85%,
+            colors.$category-blue 85% 100%
         );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-blue;
+                stroke: colors.$category-blue;
+            }
+        }
     }
 
-    // Dark Blue
-    input[type="radio"]:checked+label.darkblue{
-        background-color: colors.$dark-blue;
-        color: white;
+    // Category cyan
+    .category-cyan {
+        background-color: colors.$category-cyan;
     }
 
-    .darkblue{
-        color: colors.$dark-blue;
-        box-shadow: inset 0 0 0 4px colors.$dark-blue;
+    input[type="radio"]:checked+label.category-cyan{
+        background: linear-gradient(
+            to right,
+            colors.$category-cyan 0% 15%,
+            colors.$category-cyan-dark 15% 85%,
+            colors.$category-cyan 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-cyan;
+                stroke: colors.$category-cyan;
+            }
+        }
     }
 
-    // Grape
+    // Category-red
 
-    input[type="radio"]:checked+label.grape{
-        background-color: colors.$grape;
-        color: white;
+    .category-red {
+        background-color: colors.$category-red;
     }
 
-    .grape{
-        color: colors.$grape;
-        box-shadow: inset 0 0 0 4px colors.$grape;
+    input[type="radio"]:checked+label.category-red{
+        background: linear-gradient(
+            to right,
+            colors.$category-red 0% 15%,
+            colors.$category-red-dark 15% 85%,
+            colors.$category-red 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-red;
+                stroke: colors.$category-red;
+            }
+        }
     }
 
-    //Yellow
-    input[type="radio"]:checked+label.yellow{
-        background-color: colors.$yellow;
-        color: white;
+    //Category-yellow
+    .category-yellow {
+        background-color: colors.$category-yellow;
     }
 
-    .yellow{
-        color: colors.$yellow;
-        box-shadow: inset 0 0 0 4px colors.$yellow;
+    input[type="radio"]:checked+label.category-yellow{
+        background: linear-gradient(
+            to right,
+            colors.$category-yellow 0% 15%,
+            colors.$category-yellow-dark 15% 85%,
+            colors.$category-yellow 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-yellow;
+                stroke: colors.$category-yellow;
+            }
+        }
     }
 
 
-    //Green
-    input[type="radio"]:checked+label.green{
-        background-color: colors.$green;
-        color: white;
+    //Category-brown
+    .category-brown {
+        background-color: colors.$category-brown;
     }
 
-    .green{
-        color: colors.$green;
-        box-shadow: inset 0 0 0 4px colors.$green;
+    input[type="radio"]:checked+label.category-brown{
+        background: linear-gradient(
+            to right,
+            colors.$category-brown 0% 15%,
+            colors.$category-brown-dark 15% 85%,
+            colors.$category-brown 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-brown;
+                stroke: colors.$category-brown;
+            }
+        }
     }
  
 
-    //Orange
-    input[type="radio"]:checked+label.orange{
-        background-color: colors.$orange;
-        color: white;
+    //Category-dark-blue
+    .category-dark-blue {
+        background-color: colors.$category-dark-blue;
     }
 
-    .orange{
-        color: colors.$orange;
-        box-shadow: inset 0 0 0 4px colors.$orange;
+    input[type="radio"]:checked+label.category-dark-blue{
+        background: linear-gradient(
+            to right,
+            colors.$category-dark-blue 0% 15%,
+            colors.$category-dark-blue-dark 15% 85%,
+            colors.$category-dark-blue 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-dark-blue;
+                stroke: colors.$category-dark-blue;
+            }
+        }
+    }
+
+    //Category-purple
+    .category-purple {
+        background-color: colors.$category-purple;
+    }
+
+    input[type="radio"]:checked+label.category-purple{
+        background: linear-gradient(
+            to right,
+            colors.$category-purple 0% 15%,
+            colors.$category-purple-dark 15% 85%,
+            colors.$category-purple 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-purple;
+                stroke: colors.$category-purple;
+            }
+        }
+    }
+
+    //Category-violet
+    .category-violet {
+        background-color: colors.$category-violet;
+    }
+
+    input[type="radio"]:checked+label.category-violet{
+        background: linear-gradient(
+            to right,
+            colors.$category-violet 0% 15%,
+            colors.$category-violet-dark 15% 85%,
+            colors.$category-violet 85% 100%
+        );
+
+        svg{
+            display:inline;
+            path {
+                fill: colors.$category-violet;
+                stroke: colors.$category-violet;
+            }
+        }
     }
 
 }
