--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -23,8 +23,8 @@ $category-yellow: #F8D347;
 $category-yellow-dark: #A98F30;
 $category-brown: #BC6C25;
 $category-brown-dark: #804919;
-$category-dark-blue: #073B4C;
-$category-dark-blue-dark: #052834;
+$category-green: #00C864;
+$category-green-dark: #008744;
 $category-purple: #A259FF;
 $category-purple-dark: #6E3DAD;
 $category-violet: #9694FF;
