Login error message displaying now when incorrect username or password

--- a/frontend-friends/src/routes/login/Login.scss
+++ b/frontend-friends/src/routes/login/Login.scss
@@ -25,6 +25,10 @@
     align-items: center;
     gap: 45px;
 
+    .error-msg{
+        color:red;
+    }
+
     form {
         display: flex;
         flex-direction: column;
