--- a/frontend-friends/src/routes/login/Login.scss
+++ b/frontend-friends/src/routes/login/Login.scss
@@ -29,6 +29,10 @@
         color:red;
     }
 
+    .error-msg{
+        color:red;
+    }
+
     form {
         display: flex;
         width: 100%;
