--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -36,6 +36,8 @@ $category-orange-dark: #A75F25;
 $category-darker-green: #0EAD69;
 $category-darker-green-dark: #0A7647;
 
+$category-text: rgba(0, 0, 0, 0.5);
+
 $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
 $placeholder-text: #B7BECC;
