--- a/frontend-friends/src/routes/caselist/CaseList.scss
+++ b/frontend-friends/src/routes/caselist/CaseList.scss
@@ -5,7 +5,8 @@
     margin-right: 40px;
     margin-bottom: 40px;
     border-radius: 6px;
-    filter: drop-shadow(5px 5px 15px #dee0e2);
+    box-shadow: 5px 5px 15px #dee0e2;
+    overflow: scroll;
 
     .container-title {
         padding: 30px;
