--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -6,6 +6,7 @@
         margin-right: 40px;
         margin-bottom: 40px;
         border-radius: 6px;
+        overflow-y:auto;
         filter: drop-shadow(5px 5px 15px #dee0e2);
 
         .container-title {
