--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -23,7 +23,7 @@
     background: white;
     width: 500px;
     height: 85%;
-    min-height: 600px;
+    min-height: 650px;
     display: flex;
     flex-direction: column;
     padding: 0 30px;
@@ -57,7 +57,7 @@
         }
     }
 
-    button {
+    .submit-button {
         width: 50%;
     }
 
@@ -85,5 +85,48 @@
 
     p {
         flex-grow: 1;
+    }
+}
+
+.switch-buttons {
+    align-self: end;
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+
+    button {
+        all: unset;
+        width: 50px;
+        height: 50px;
+        background-color: colors.$switch-button-background;
+        border-radius: 6px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color 0.3s;
+
+        &:hover{
+            background-color: colors.$switch-button-hover;
+        }
+    }
+
+    .left {
+
+        svg {
+            transform: rotate(0.5turn);
+        }
+    }
+
+    .disabled {
+        background-color: colors.$switch-button-disabled-background;
+        pointer-events: none;
+        
+        svg {
+            path {
+                fill: colors.$switch-button-disabled-icon;
+            }
+        }
     }
 }
