--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -45,3 +45,8 @@ $placeholder-text: #B7BECC;
 $table-header-text: #879298;
 
 $danger-red: #FF1744;
+
+$switch-button-background: #D1D9E1;
+$switch-button-hover: #C1C5C9;
+$switch-button-disabled-background: #E6E8E9;
+$switch-button-disabled-icon: #9C9FA0;
