--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -42,6 +42,8 @@ $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
 $placeholder-text: #B7BECC;
 
+$darker-grey-background: #D8D9DA;
+
 $table-header-text: #879298;
 
 $danger-red: #FF1744;
