--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -72,11 +72,68 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    position: relative;
+
+    .hashtag {
+        width: 50px;
+        height: 50px;
+        box-sizing: border-box;
+        position: absolute;
+        top: 51.5px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        z-index: 1;
+        border-radius: 6px 0 0 6px;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset 1px 0 0 0 colors.$text-field-stroke;
+        font-size: 20px;
+        line-height: 50px;
+        text-align: center;
+    }
+
+    .hashtag + .text-field {
+        margin-left: 50px;
+        input {
+            border-radius: 0 6px 6px 0;
+        }
+    }
 }
 
 .dual-textfield-container {
     display: flex;
     gap: 10px;
+
+    .minutes {
+        width: 70px;
+        height: 50px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        position: absolute;
+        box-sizing: border-box;
+        font-size: 18px;
+        line-height: 48px;
+        text-align: center;
+        border-radius: 0 6px 6px 0;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset -1px 0 0 0 colors.$text-field-stroke;
+    }
+
+    .minutes-text-field {
+        width: calc(100% - 70px);
+        border-radius: 6px 0 0 6px;
+    }
+
+    .left {
+        left: 125px;
+    }
+
+    .right {
+        right: 0;
+    }
 }
 
 .dual-textfield-labels {
