Implemented previous and next buttons in popup, ready for merge (#45)
* Implemented previous and next buttons in popup, ready for merge

* Did some changes to popup, now it says min after time and # before case nr

* style fixes....

* Update List.js

* Fixed layout a little

--- a/frontend-friends/src/style/colors.scss
+++ b/frontend-friends/src/style/colors.scss
@@ -42,6 +42,13 @@ $text-field-background: #F7F9FB;
 $text-field-stroke: #B8C4CF;
 $placeholder-text: #B7BECC;
 
+$darker-grey-background: #D8D9DA;
+
 $table-header-text: #879298;
 
 $danger-red: #FF1744;
+
+$switch-button-background: #D1D9E1;
+$switch-button-hover: #C1C5C9;
+$switch-button-disabled-background: #E6E8E9;
+$switch-button-disabled-icon: #9C9FA0;
