--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -23,7 +23,8 @@
     background: white;
     width: 500px;
     height: 85%;
-    min-height: 600px;
+    min-height: 650px;
+    max-height: 700px;
     display: flex;
     flex-direction: column;
     padding: 0 30px;
@@ -57,7 +58,7 @@
         }
     }
 
-    button {
+    .submit-button {
         width: 50%;
     }
 
@@ -72,11 +73,68 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    position: relative;
+
+    .hashtag {
+        width: 50px;
+        height: 50px;
+        box-sizing: border-box;
+        position: absolute;
+        top: 51.5px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        z-index: 1;
+        border-radius: 6px 0 0 6px;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset 1px 0 0 0 colors.$text-field-stroke;
+        font-size: 20px;
+        line-height: 50px;
+        text-align: center;
+    }
+
+    .hashtag + .text-field {
+        margin-left: 50px;
+        input {
+            border-radius: 0 6px 6px 0;
+        }
+    }
 }
 
 .dual-textfield-container {
     display: flex;
     gap: 10px;
+
+    .minutes {
+        width: 70px;
+        height: 50px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        position: absolute;
+        box-sizing: border-box;
+        font-size: 18px;
+        line-height: 48px;
+        text-align: center;
+        border-radius: 0 6px 6px 0;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset -1px 0 0 0 colors.$text-field-stroke;
+    }
+
+    .minutes-text-field {
+        width: calc(100% - 70px);
+        border-radius: 6px 0 0 6px;
+    }
+
+    .left {
+        left: 125px;
+    }
+
+    .right {
+        right: 0;
+    }
 }
 
 .dual-textfield-labels {
@@ -85,5 +143,49 @@
 
     p {
         flex-grow: 1;
+    }
+}
+
+.switch-buttons {
+    align-self: end;
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    bottom: 15px;
+
+    button {
+        all: unset;
+        width: 50px;
+        height: 50px;
+        background-color: colors.$switch-button-background;
+        border-radius: 6px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background-color 0.3s;
+
+        &:hover{
+            background-color: colors.$switch-button-hover;
+        }
+    }
+
+    .left {
+
+        svg {
+            transform: rotate(0.5turn);
+        }
+    }
+
+    .disabled {
+        background-color: colors.$switch-button-disabled-background;
+        pointer-events: none;
+        
+        svg {
+            path {
+                fill: colors.$switch-button-disabled-icon;
+            }
+        }
     }
 }
