--- a/frontend-friends/src/routes/statistics/Statistics.scss
+++ b/frontend-friends/src/routes/statistics/Statistics.scss
@@ -4,6 +4,7 @@
         margin-top: 10%;
         background-color: white;
         height: 50%;
+        width: 100%;
     }
 
     .chart-container{
