--- a/frontend-friends/src/routes/dashboard/dashboard.scss
+++ b/frontend-friends/src/routes/dashboard/dashboard.scss
@@ -6,7 +6,8 @@
         margin-right: 40px;
         margin-bottom: 40px;
         border-radius: 6px;
-        overflow-y:auto;
+        overflow-x: auto;
+        overflow-y: hidden;
         filter: drop-shadow(5px 5px 15px #dee0e2);
 
         .container-title {
