--- a/frontend-friends/src/components/popup/popup.scss
+++ b/frontend-friends/src/components/popup/popup.scss
@@ -40,7 +40,7 @@
         margin-top: 30px;
     }
 
-    span {
+    .close-icon {
         position: absolute;
         right: 15px;
         top: 15px;
@@ -105,36 +105,6 @@
 .dual-textfield-container {
     display: flex;
     gap: 10px;
-
-    .minutes {
-        width: 70px;
-        height: 50px;
-        background-color: colors.$darker-grey-background;
-        color: rgba(0,0,0,0.5);
-        position: absolute;
-        box-sizing: border-box;
-        font-size: 18px;
-        line-height: 48px;
-        text-align: center;
-        border-radius: 0 6px 6px 0;
-        box-shadow: 
-            inset 0 1px 0 0 colors.$text-field-stroke, 
-            inset 0 -1px 0 0 colors.$text-field-stroke, 
-            inset -1px 0 0 0 colors.$text-field-stroke;
-    }
-
-    .minutes-text-field {
-        width: calc(100% - 70px);
-        border-radius: 6px 0 0 6px;
-    }
-
-    .left {
-        left: 125px;
-    }
-
-    .right {
-        right: 0;
-    }
 }
 
 .dual-textfield-labels {
