--- a/frontend-friends/src/components/textfield/textfield.scss
+++ b/frontend-friends/src/components/textfield/textfield.scss
@@ -3,6 +3,7 @@
 .text-field {
 
     position: relative;
+    width: 100%;
 
     ::placeholder{
         color: colors.$placeholder-text;
@@ -52,9 +53,89 @@
     input:focus + label{
         display: none;
     }
+
+
+    display: flex;
+
+    .textfield-left-text{
+        font-size: 18px;
+        display: inline-flex;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        border-radius: 0 6px 6px 0;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset -1px 0 0 0 colors.$text-field-stroke;
+    }
+
+
+    .textfield-right-text{
+        font-size: 18px;
+        display: inline-flex;
+        align-items: center;
+        padding-left: 15px;
+        padding-right: 15px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        
+        border-radius: 6px 0 0 6px;
+        box-shadow: 
+        inset 0 1px 0 0 colors.$text-field-stroke, 
+        inset 0 1px 0 0 colors.$text-field-stroke, 
+        inset 1px 0 0 0 colors.$text-field-stroke;
+    }
+
+    .textfield-input-container{
+        position: relative;
+        flex: 1;
+    }
+
 }
 
+input.textfield-right-text-container{
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+input.textfield-left-text-container{
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
 
-  
+.text-field-wrapper{
+    display: flex;
+    gap: 10px;
 
+    .minutes {
+        width: 70px;
+        height: 50px;
+        background-color: colors.$darker-grey-background;
+        color: rgba(0,0,0,0.5);
+        position: absolute;
+        box-sizing: border-box;
+        font-size: 18px;
+        line-height: 48px;
+        text-align: center;
+        border-radius: 0 6px 6px 0;
+        box-shadow: 
+            inset 0 1px 0 0 colors.$text-field-stroke, 
+            inset 0 -1px 0 0 colors.$text-field-stroke, 
+            inset -1px 0 0 0 colors.$text-field-stroke;
+    }
 
+    .minutes-text-field {
+        width: calc(100% - 70px);
+        border-radius: 6px 0 0 6px;
+    }
+
+    .left {
+        left: 125px;
+    }
+
+    .right {
+        right: 0;
+    }
+}
