--- a/frontend-friends/src/components/message/succesSnackbar.scss
+++ b/frontend-friends/src/components/message/succesSnackbar.scss
@@ -1,6 +1,6 @@
 @use '../../style/colors';
 
-.mui-Snackbar  {
+.succes-Snackbar  {
     //all: unset;
     //background-color: colors.$primary-color;
    
